# jic_competiion

./: CONTRIBUTING.md  package.xml  pytest.ini  requirements.txt
config/: ros2_settings.yaml  system_params.yaml
launch/: full_system.launch.py
src/execution/chassis_control/include/: chassis_dariver.py
tests/: README.md
