<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>sweet_potato_robot</name>
  <version>0.0.1</version>
  <description>地瓜机器人项目</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
